--- a/learning/1. torch入门.ipynb
+++ b/learning/1. torch入门.ipynb
@@ -918,172 +918,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "82669a5a-ea7f-4ff3-8d7c-154bdb4d1701",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Package              Version\n",
-      "-------------------- -----------\n",
-      "anyio                3.6.1\n",
-      "argon2-cffi          21.3.0\n",
-      "argon2-cffi-bindings 21.2.0\n",
-      "asttokens            2.0.7\n",
-      "attrs                22.1.0\n",
-      "Babel                2.10.3\n",
-      "backcall             0.2.0\n",
-      "beautifulsoup4       4.11.1\n",
-      "bleach               5.0.1\n",
-      "certifi              2022.6.15\n",
-      "cffi                 1.15.1\n",
-      "charset-normalizer   2.1.0\n",
-      "colorama             0.4.5\n",
-      "debugpy              1.6.2\n",
-      "decorator            5.1.1\n",
-      "defusedxml           0.7.1\n",
-      "entrypoints          0.4\n",
-      "executing            0.9.1\n",
-      "fastjsonschema       2.16.1\n",
-      "future               0.18.2\n",
-      "idna                 3.3\n",
-      "importlib-metadata   4.12.0\n",
-      "ipykernel            6.15.1\n",
-      "ipython              8.4.0\n",
-      "ipython-genutils     0.2.0\n",
-      "jedi                 0.18.1\n",
-      "Jinja2               3.1.2\n",
-      "json5                0.9.9\n",
-      "jsonschema           4.9.1\n",
-      "jupyter-client       7.3.4\n",
-      "jupyter-core         4.11.1\n",
-      "jupyter-server       1.18.1\n",
-      "jupyterlab           3.4.4\n",
-      "jupyterlab-pygments  0.2.2\n",
-      "jupyterlab-server    2.15.0\n",
-      "MarkupSafe           2.1.1\n",
-      "matplotlib-inline    0.1.3\n",
-      "mistune              0.8.4\n",
-      "mkl-fft              1.3.1\n",
-      "mkl-random           1.2.2\n",
-      "mkl-service          2.4.0\n",
-      "nbclassic            0.4.3\n",
-      "nbclient             0.6.6\n",
-      "nbconvert            6.5.0\n",
-      "nbformat             5.4.0\n",
-      "nest-asyncio         1.5.5\n",
-      "notebook             6.4.12\n",
-      "notebook-shim        0.1.0\n",
-      "numpy                1.23.1\n",
-      "packaging            21.3\n",
-      "pandocfilters        1.5.0\n",
-      "parso                0.8.3\n",
-      "pickleshare          0.7.5\n",
-      "Pillow               9.2.0\n",
-      "pip                  22.1.2\n",
-      "prometheus-client    0.14.1\n",
-      "prompt-toolkit       3.0.30\n",
-      "psutil               5.9.1\n",
-      "pure-eval            0.2.2\n",
-      "pycparser            2.21\n",
-      "Pygments             2.12.0\n",
-      "pyparsing            3.0.9\n",
-      "pyrsistent           0.18.1\n",
-      "python-dateutil      2.8.2\n",
-      "pytz                 2022.1\n",
-      "pywin32              304\n",
-      "pywinpty             2.0.7\n",
-      "pyzmq                23.2.0\n",
-      "requests             2.28.1\n",
-      "Send2Trash           1.8.0\n",
-      "setuptools           61.2.0\n",
-      "six                  1.16.0\n",
-      "sniffio              1.2.0\n",
-      "soupsieve            2.3.2.post1\n",
-      "stack-data           0.3.0\n",
-      "terminado            0.15.0\n",
-      "tinycss2             1.1.1\n",
-      "torch                1.10.2\n",
-      "torchaudio           0.10.2\n",
-      "torchvision          0.11.3\n",
-      "tornado              6.2\n",
-      "traitlets            5.3.0\n",
-      "typing_extensions    4.3.0\n",
-      "urllib3              1.26.11\n",
-      "wcwidth              0.2.5\n",
-      "webencodings         0.5.1\n",
-      "websocket-client     1.3.3\n",
-      "wheel                0.37.1\n",
-      "wincertstore         0.2\n",
-      "zipp                 3.8.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3528599804.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [58]\u001b[1;36m\u001b[0m\n\u001b[1;33m    git status\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
-   "source": [
-    "pip list"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "ca47bf09-1e37-4e64-abc4-feafbfece7d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "99461bd3-497a-438a-ae92-03faedb7e20a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda')"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "device"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "d4f23e6f-5223-46d1-a07f-e9573e90a503",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Torch not compiled with CUDA enabled",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m          Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [57]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mD:\\anaconda\\envs\\ml\\lib\\site-packages\\torch\\cuda\\__init__.py:208\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    204\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    205\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    206\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    207\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m--> 208\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    209\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    210\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    211\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
-     ]
-    }
-   ],
-   "source": [
-    "torch.zeros([2,3], device=device)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "26fb850f-da2c-4d8d-9721-4845a25561b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8d88216-caec-4311-8e21-8e471196b74a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41b61b6e-6d60-4e87-bcd6-5eeb8375d09c",
    "metadata": {},
    "outputs": [],
    "source": []
